--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,17 +24,20 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:23.4.0'
     //noinspection GradleCompatible
-    compile 'com.android.support:recyclerview-v7:24.1.1'
     //noinspection GradleCompatible
-    compile 'com.android.support:cardview-v7:24.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
-//    Retrofit
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    //    Retrofit
     //Google Drive API
 //    compile 'com.google.http-client:google-http-client-gson:1.18.0-rc'
-    compile 'com.android.support:support-annotations:22.2.0'
+    //    libreria de picasso
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
+    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.android.support:support-annotations:23.4.0'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:support-v4:23.4.0'
     testCompile 'junit:junit:4.12'
 }
